10-13-2016

   Jonathan Baron (Penn) has transfered maintainer status to
   Shawn Garbett (Vanderbilt). A shoutout to Dr. Baron's work
   for the last several years. 

10-6-2016 

   Shawn Garbett cleaned up fortran6 warnings to maintain CRAN
   status. Stated precision of exported variables now matches
   internal computations. An extremely unlikely but possible
   division by zero path is prevented.

11-23-2014

   Removed non-standard files from top directory.

4-20-2013

   Brian Ripley fixed a fortran error.

4-5-2012

   Added namespace and removed stray print in avas.

7-4-2010

   Fixed options circ, cat, and mon, in both ace and avas, so that
   they now can apply to the dependent variable, as specified
   previously in both the help page and the fortran code.  Colin
   McCullogh did most of the work.  Frank Harrell also reported this
   bug.

   Fixed the checks on the options so that they apply to the correct
   dimension.  Previously circ and mon were not working as described.
   Thanks to Frank Harrell.

   Expanded the help pages to make them clearer and provide more
   examples.

   Jon Baron